# AiAgente

./: call_function.py  main.py  pyproject.toml  test_get_file_content.py
calculator/: lorem.txt
calculator/pkg/: calculator.py
functions/: call_funtion.py  get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
tests/: test_get_file_content.py  test_run_python_file.py  test_write_file.py
